--- a/app/assets/sass/1-base/_global.sass
+++ b/app/assets/sass/1-base/_global.sass
@@ -198,3 +198,7 @@ figure
   background-repeat: no-repeat
   vertical-align: middle        
   position: relative
+.tooltip-inner 
+  min-width: 10em  
+.red 
+  color: red  
