--- a/app/assets/sass/2-modules/_filters.sass
+++ b/app/assets/sass/2-modules/_filters.sass
@@ -19,3 +19,17 @@
       padding: 0
   input[type="checkbox"]:checked + label  
     background-image: url(../img/cat_checkboxActive.svg)
+.solicita-cont-header
+  padding-left: 3em
+  input[type="radio"] 
+    display: none
+  input[type="radio"] + label
+    font-weight: 400
+    padding-left: 1.2em
+    // background-color: blue
+    background-image: url(../img/cat_checkbox.svg)
+    background-repeat: no-repeat
+    background-position: 0 8px
+    background-size: 13px
+  input[type="radio"]:checked + label  
+    background-image: url(../img/cat_checkboxActive.svg)      
