--- a/app/assets/sass/2-modules/_forms.sass
+++ b/app/assets/sass/2-modules/_forms.sass
@@ -13,4 +13,19 @@
 .popover  
   transition: all 0s linear
 .generic-form
-  margin-bottom: 2rem  
+  margin-bottom: 2rem 
+.form-notice
+  border-top: 1px solid $primary
+  padding-top: 0.5em
+  // max-width: 270px 
+  // @media (max-width: 1279px)
+  //   max-width: 100% 
+  span 
+    color: $primary
+    font-weight: 600  
+.form-horizontal 
+  label 
+    text-align: left !important 
+    font-weight: 600 !important   
+  
+    
