--- a/app/assets/sass/3-layout/_category.sass
+++ b/app/assets/sass/3-layout/_category.sass
@@ -150,3 +150,25 @@
     color: $red
     width: 1.2em
     text-align: center
+.quicklist-search
+  text-align: right 
+  border-bottom: 1px solid #00acee
+  margin-bottom: 2em
+  form 
+    display: inline-block
+  input 
+    text-align: right 
+    border: none
+  button 
+    background-color: transparent
+    color: $primary  
+.quicksearch-tag
+  float: left
+  background-color: $secondary
+  padding: 0.5em 1em
+  border-radius: 0.5em
+  color: #fff    
+  i 
+    cursor: pointer
+    &:hover 
+      color: $red
