--- a/app/assets/sass/3-layout/_checkout.sass
+++ b/app/assets/sass/3-layout/_checkout.sass
@@ -1,23 +1,14 @@
-.checkout-address-view  
-  input 
-    border: none 
-    line-height: 1
-    &:hover, &:focus
-      box-shadow: none       
-  label 
-    font-weight: 600
-    // text-transform: uppercase   
-    
-.invoice  
-  label    
-    margin: 0
-    width: 100%
-    max-width: 150px  
-.delivery
-  label      
-    margin: 0
-    width: 100%
-    max-width: 150px  
+   
+// .invoice  
+//   label    
+//     margin: 0
+//     width: 100%
+//     max-width: 150px  
+// .delivery
+//   label      
+//     margin: 0
+//     width: 100%
+//     max-width: 150px  
 #checkout-page
   .wrap
     background-color: #fff
@@ -36,39 +27,6 @@
     background-color: #fff
     padding: 20px 0
     margin-bottom: 0
-  // .checkout-login
-  //   background-color: #f4f4f4
-  //   padding: 0px 15px
-  //   background: white
-  //   background: $gradient
-  //   background: -moz-linear-gradient(top, white 0%, #fafafa 100%)
-  //   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, #fafafa))
-  //   background: -webkit-linear-gradient(top, white 0%, #fafafa 100%)
-  //   background: -o-linear-gradient(top, white 0%, #fafafa 100%)
-  //   background: -ms-linear-gradient(top, white 0%, #fafafa 100%)
-  //   background: linear-gradient(to bottom, white 0%, #fafafa 100%)
-  //   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#fafafa',GradientType=0 )
-  //   border: 1px solid #eee
-  //   border-bottom: 1px solid $primary
-    p      
-    // .login-box
-    //   margin-top: 10px
-    //   input[type="email"], input[type="password"]
-    //     height: 34px
-    //     border-radius: 5px
-    //     border: 1px solid #9fc3e5
-    //     border-color: #ddd
-    //     width: 100%
-    //     margin: 0px 0px 10px
-    //     display: block
-    //     padding-left: 10px
-    //     line-height: 34px
-    //     border-radius: 0px
-    //     outline: none
-    //     &:focus
-    //       border-color: #5798d4
-    //       border-color: #7fb1de
-    //       box-shadow: 0px 0px 3px #5798d4
       a
         color: $primary
         text-decoration: underline
@@ -284,6 +242,6 @@
   border-bottom: 1px solid $primary
   line-height: 2
   color: #000000    
-#billing_addresses
-  width: 10em
-  display: inline-block
+// #billing_addresses
+//   max-width: 10em
+ 
