--- a/app/assets/sass/0-tools/_bootstrap-config.sass
+++ b/app/assets/sass/0-tools/_bootstrap-config.sass
@@ -1,7 +1,7 @@
 // Core variables and mixins
 @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables
 @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins
-$grid-gutter-width: 20px
+// $grid-gutter-width: 20px
 
 // Reset and dependencies
 // @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/normalize
@@ -14,7 +14,7 @@ $grid-gutter-width: 20px
 // @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/code
 // @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/grid
 // @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tables
-@import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/forms
+// @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/forms
 // @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/buttons
 
 // Components
@@ -41,7 +41,7 @@ $grid-gutter-width: 20px
 // @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/close
 
 // Components w/ JavaScript
-// @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/modals
+@import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/modals
 // @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tooltip
 // @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/popovers
 // @import ../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/carousel
