--- a/app/assets/sass/3-layout/_account.sass
+++ b/app/assets/sass/3-layout/_account.sass
@@ -51,3 +51,48 @@
       color: $primary         
 .account-options
   margin-bottom: 2em
+
+#errormessages
+  background-color: #ffe6b8
+  border-radius: 0.5em
+  padding: 1em
+  // border: 1px solid #ffb731
+  margin-bottom: 0.5em
+  .fa 
+    color: #ffb731
+  li 
+    margin-bottom: 0.5em
+    &:last-child 
+      margin-bottom: 0 
+.right-side-forms-wrapper
+  margin-top: 2em
+  border-left: 2px solid $primary  
+  margin-bottom: 4em  
+  min-height: 500px 
+  &:before
+    content: ""
+    width: 38px
+    height: 38px
+    background-image: url('/Files/Templates/Designs/RTC/assets/img/separatorFormular-initial.svg')
+    background-repeat: no-repeat 
+    background-size: contain
+    background-position: center
+    position: absolute
+    left: -18px    
+    top: 170px 
+  &.activated:before 
+    background-image: url('/Files/Templates/Designs/RTC/assets/img/separatorFormular.svg')
+    left: 1px
+.right-side-forms 
+  .row 
+    display: none
+    &.generic-form
+      display: block
+  // .row:first-child
+  //   display: block    
+  .content-form    
+    padding-left: 4em
+#react-dataList    
+  .item 
+    .role 
+      color: $primary
