--- a/app/assets/sass/3-layout/_content.sass
+++ b/app/assets/sass/3-layout/_content.sass
@@ -63,3 +63,14 @@
     color: $primary  
   .generic-form  
     margin-top: 2em
+.solicita-cont-paragraph
+  h2 
+    font-size: 1.8rem
+    font-weight: 700
+    color: #00ACEE
+    margin-bottom: 1em
+    margin-top: 1em   
+.solicita-cont-header
+  margin-top: 2em
+  margin-bottom: 1em  
+  font-size: 1.4em   
