--- a/app/assets/sass/_homepage.sass
+++ b/app/assets/sass/_homepage.sass
@@ -7,6 +7,8 @@
   background-repeat: no-repeat
   background-size: cover  
   background-position: right bottom
+  +tablet
+    width: 100%
 .banner 
   display: block
   margin-bottom: $spacing*2
